--- a/index-full.html
+++ b/index-full.html
@@ -93,24 +93,22 @@
 
 {Anrede}
 
-heute wende ich mich an Sie mit einem Thema, das für viele Bürgerinnen, Bürger und Unternehmen in Ihrem Wahlkreis sehr relevant ist: Die Fortsetzung der Energiewende.
-Bürgerinnen und Bürger, Unternehmen und Kommunen investieren mit Photovoltaik und Speicher in die Energiewende und den Klimaschutz. Die so produzierte Energie nutzen sie zu einem guten Teil selbst. Sie sparen damit Stromkosten und tragen zu unseren Klimazielen bei. 
-Doch jetzt ist diese erfolgreiche Entwicklung bedroht. Bundesministerin Reiche möchte die Energiewende drosseln, die feste Einspeisevergütung abschaffen und neue Erdgaskraftwerke bauen. Außerdem bereitet die Bundesnetzagentur mit ihrem Diskussionspapier AgNes eine massive Verschlechterung der Wirtschaftlichkeit für Produzenten von erneuerbarem Strom vor. 
-Deshalb möchte ich Sie für die Forderungen der Initiative „Sonnenstrom statt Erdgasstrom“ gewinnen, die die deutschen Stromkunden und das Klima entlasten: 
+heute möchte ich mich an Sie wenden, um Ihre Aufmerksamkeit auf ein Thema zu lenken, das für sehr viele Bürgerinnen, Bürger und Unternehmen in Ihrem Wahlkreis sehr relevant ist: die Fortsetzung der Energiewende.
 
-1. Keine neuen Erdgaskraftwerke. Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken.
+Bürgerinnen, Bürger und Unternehmen investieren mit Photovoltaik und Speicher in die Energiewende und den Klimaschutz. Die selbst produzierte Energie wird direkt und über den Stromspeicher genutzt. Das ist ökonomisch und ökologisch sinnvoll.
 
+Möglich wurde dies durch das EEG (Erneuerbare-Energien-Gesetz). Doch jetzt steht diese erfolgreiche Entwicklung vor dem Abbruch. Bundesministerin Reiche möchte die Energiewende drosseln, neue Erdgaskraftwerke bauen und die feste Einspeisevergütung abschaffen. Außerdem plant die Bundesnetzagentur mit ihrem Diskussionspapier AgNes eine massive Verschlechterung der Wirtschaftlichkeit für Produzenten von regenerativer Energie. Dagegen möchte ich mich mit diesem Brief an Sie wenden und die Forderungen der Initiative „Sonnenstrom statt Erdgasstrom“ unterstützen. Die Forderungen sind:
+
+1. Keine neuen Erdgaskraftwerke – Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken.
 2. Ausbau Erneuerbarer beschleunigen – und netzdienliche Erzeugung belohnen.
-
-3. Feste Einspeisevergütung beibehalten bis Smart Meter flächendeckend eine einfache, flexible Vergütung erlauben.
-
+3. Feste Einspeisevergütung beibehalten, bis Smart Meter flächendeckend eine einfache, flexible Vergütung erlauben.
 4. Bestandsschutz und keine Zusatzbelastung für erneuerbare Stromerzeugung.
 
-Dieser Brief entstand mit der Aktion „Sonnenstrom statt Erdgasstrom“. Weitere Informationen zu den Plänen von Frau Reiche und der BNetzA finden Sie auf https://www.aktionsolarstrom.de.
-Vielen Dank für ihre Aufmerksamkeit. Es würde mich sehr freuen von Ihnen zu hören.
+Dieser Brief entstand im Zusammenhang der Aktion „Eigenstrom statt Kohlestrom“. Weitere Informationen zu den Plänen von Frau Reiche und der BNetzA finden Sie auf https://www.aktionsolarstrom.de.
+
+Vielen Dank für Ihre Aufmerksamkeit und Mühe. Es würde mich sehr freuen, von Ihnen zu hören.
 
 Mit freundlichen Grüßen
-
 {Vorname} {Nachname}
 {Straße}
 {PLZ} {Ort}
@@ -156,10 +154,9 @@ Mit freundlichen Grüßen
       let wks = plzMap[plz] || [];
 
       if ((!wks || !wks.length) && city) {
-        const key = norm(city); // z.B. "muenchen"
-        // Keys im ortMap sehen aus wie "muenchen bayern|..." – wir nehmen Prefix-Matches
+        const key = norm(city); // z. B. "muenchen"
         const hits = Object.entries(ortMap)
-          .filter(([k]) => k.startsWith(key))
+          .filter(([k]) => k.startsWith(key)) // Keys wie "muenchen bayern"
           .map(([, arr]) => arr);
         wks = [...new Set(hits.flat())];
       }
@@ -169,8 +166,7 @@ Mit freundlichen Grüßen
         const wk = String(wks[0]);
         return { mdb: wkMap[wk] || null, wks };
       }
-      // mehrere WK (z. B. München) → keine Auto-Auswahl
-      return { mdb: null, wks };
+      return { mdb: null, wks }; // mehrere WKs → keine Auto-Auswahl
     }
 
     function ensureIntroAndAddress(anrede, addrWithName) {
@@ -184,8 +180,10 @@ Mit freundlichen Grüßen
 
     async function handlePLZ() {
       const plz  = (elPLZ.value||'').trim();
-      const city = ($('#city')?.value||'').trim();
+      // NEU: Fallback nutzt Ort oben ODER unten
+      const city = ($('#city')?.value||$('#sender_city')?.value||'').trim();
       if (!/^\d{5}$/.test(plz)) return;
+
       try {
         const { mdb, wks } = await findMdB(plz, city);
         if (mdb) {
@@ -196,21 +194,19 @@ Mit freundlichen Grüßen
           const addrWithName = (name ? name + '\n' : '') + addrML;
           ensureIntroAndAddress(anrede, addrWithName);
         } else if (wks.length > 1) {
-          // Mehrere WKs: deutlicher Hinweis, neutrale Anrede + Standardadresse
           if (elMP) {
             elMP.value = '';
-            elMP.placeholder = `Mehrere Wahlkreise (${wks.join(', ')}). Optional Namen eintragen.`;
+            elMP.placeholder = Mehrere Wahlkreise (${wks.join(', ')}). Optional Namen eintragen.;
           }
           ensureIntroAndAddress('Sehr geehrte Damen und Herren', 'Platz der Republik 1\n11011 Berlin');
         } else {
-          // nichts gefunden: neutrale Defaults
           if (elMP) elMP.value = '';
           ensureIntroAndAddress('Sehr geehrte Damen und Herren', 'Platz der Republik 1\n11011 Berlin');
         }
       } catch(e){
-        // Fallback – Brief bleibt druckbar
         ensureIntroAndAddress('Sehr geehrte Damen und Herren', 'Platz der Republik 1\n11011 Berlin');
       }
+
       // Tokens im Brief unten sofort ersetzen
       document.querySelector('#sender_zip')?.dispatchEvent(new Event('input'));
       document.querySelector('#sender_city')?.dispatchEvent(new Event('input'));
@@ -220,6 +216,10 @@ Mit freundlichen Grüßen
 
     elPLZ.addEventListener('change', handlePLZ);
     elPLZ.addEventListener('blur', handlePLZ);
+    // NEU: wenn der Ort später eingetragen/geändert wird, Lookup erneut versuchen
+    ['input','change','blur'].forEach(ev=>{
+      document.querySelector('#city')?.addEventListener(ev, handlePLZ);
+    });
   })();
   </script>
 
@@ -312,6 +312,7 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
 
 
 
