--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
     /* Downloadleiste */
     .downloads a { display:inline-block; margin-right:12px; margin-bottom:8px; }
 
+    /* Responsive Video */
+    .video-wrap { position:relative; width:100%; aspect-ratio:16 / 9; background:#000; border-radius:12px; overflow:hidden; box-shadow:0 2px 10px rgba(0,0,0,.06); }
+    .video-wrap iframe { position:absolute; inset:0; width:100%; height:100%; border:0; }
+
     /* Footer */
     footer .legal { text-align:center; display:block; }
   </style>
@@ -60,7 +64,7 @@
         <img src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
         <div>
           <h1>Solarstrom statt Erdgas-Strom</h1>
-          <p class="tagline">Informieren. Mitmachen. Briefe an Abgeordnete – wir drucken & versenden physisch.</p>
+          <p class="tagline">Informieren. Mitmachen. Briefe an Abgeordnete – wir drucken &amp; versenden physisch.</p>
           <div style="margin-top:10px">
             <a class="cta primary" href="#mitmachen">Jetzt mitmachen</a>
             <a class="cta secondary" href="#material">Materialien</a>
@@ -71,7 +75,7 @@
 
     <main class="middle">
 
-      <!-- Einleitung / aus der hochgeladenen Datei -->
+      <!-- Einleitung -->
       <section id="intro">
         <p class="lead">
           Wirtschaftsministerin Reiche und Bundeskanzler Friedrich Merz sprechen von Technologieoffenheit und Wirtschaftlichkeit. Mit ihren konkreten Forderungen werden aber einseitig fossile Kraftwerke begünstigt und der Ausbau günstiger Erneuerbaren gebremst. 
@@ -79,8 +83,26 @@
           Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: <em>„Für uns ist klar: Energie muss bezahlbar, sicher und sauber sein“</em>.
         </p>
         <div class="callout">
-          <strong>Kernaussage:</strong> Solarstrom senkt Kosten, erhöht Versorgungssicherheit und schützt Klima & Gesundheit.
+          <strong>Kernaussage:</strong> Solarstrom senkt Kosten, erhöht Versorgungssicherheit und schützt Klima &amp; Gesundheit.
         </div>
+      </section>
+
+      <!-- Aktuelle Sendung -->
+      <section id="sendung">
+        <h2>Gestern in der Sendung</h2>
+        <div class="video-wrap">
+          <!-- privacy-enhanced domain -->
+          <iframe
+            src="https://www.youtube-nocookie.com/embed/lzq9l2sW6Lo"
+            title="Gestern in der Sendung – Solarstrom statt Erdgas-Strom"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen>
+          </iframe>
+        </div>
+        <p style="margin-top:10px">
+          <a class="cta secondary" href="https://youtu.be/lzq9l2sW6Lo" target="_blank" rel="noopener">Auf YouTube ansehen</a>
+        </p>
       </section>
 
       <!-- Ziele / Forderungen -->
@@ -106,11 +128,11 @@
         </div>
       </section>
 
-      <!-- Hintergrund / aus Dokument -->
+      <!-- Hintergrund -->
       <section id="hintergrund">
-        <h2>Hintergrund & Argumente</h2>
+        <h2>Hintergrund &amp; Argumente</h2>
         <p></p>
-        <h3>Kosten, Klima & Sicherheit</h3>
+        <h3>Kosten, Klima &amp; Sicherheit</h3>
         <ul>
           <li>Solarstrom senkt Stromgestehungskosten und Risiken fossiler Preise.</li>
           <li>Direktnutzung reduziert Netzbelastung und Verluste.</li>
@@ -118,7 +140,7 @@
         </ul>
       </section>
 
-      <!-- Materialien / Downloads -->
+      <!-- Materialien -->
       <section id="material">
         <h2>Materialien</h2>
         <p>Hier finden Sie die Begründung für unsere Forderungen – zum Nachlesen und Weitergeben.</p>
@@ -127,15 +149,13 @@
         </div>
       </section>
 
-      <!-- Mitmachen / CTA zur Briefaktion -->
+      <!-- Mitmachen -->
       <section id="mitmachen">
         <h2>Mitmachen</h2>
         <div class="grid2">
           <div class="card">
             <h3>Brief an Abgeordnete</h3>
-            <p>
-              Schreiben Sie Ihren Brief – wir übernehmen Ausdruck und Postversand an die zuständige Bundestagsabgeordnete/den zuständigen Abgeordneten.
-            </p>
+            <p>Schreiben Sie Ihren Brief – wir übernehmen Ausdruck und Postversand an die zuständige Bundestagsabgeordnete/den zuständigen Abgeordneten.</p>
             <a class="cta primary" href="index-full.html">Brief einreichen</a>
           </div>
         </div>
@@ -175,6 +195,8 @@
   </script>
 </body>
 </html>
+
+
 
 
 
