--- a/indexTest.html
+++ b/indexTest.html
@@ -118,7 +118,7 @@
     .card h3 { margin-top:0 }
     .callout { border-left: 4px solid var(--accent); background:#fff8e1; padding:14px 16px; border-radius: 8px; }
 
-    /* ===== Video ===== */
+    /* ===== YouTube ===== */
     .video-wrap {
       position: relative;
       width: 100%;
@@ -131,41 +131,33 @@
       box-shadow: 0 6px 24px rgba(0,0,0,.15);
     }
     .video-wrap iframe { position: absolute; inset: 0; width: 100%; height: 100%; border: 0; }
+    @media (max-width:600px){ .video-wrap{ max-width:95vw; margin-bottom:16px; } }
 
     /* ===== Partner ===== */
     .partner { border:1px solid rgba(0,0,0,.08); border-radius:12px; padding:18px; background:#fff; box-shadow:0 2px 10px rgba(0,0,0,.04); }
+    .partner h2 { margin-top:0; }
     .orgs { display:grid; gap:18px; grid-template-columns:1fr; align-items:start; }
     @media (min-width:780px){ .orgs{ grid-template-columns:1fr 1fr } }
     .org { display:grid; grid-template-columns:80px 1fr; gap:14px; align-items:start; }
     .org .logoBox { display:flex; align-items:center; justify-content:center; background:#f9fafb; border:1px solid #e5e7eb; border-radius:10px; padding:10px; }
     .org img { max-width:100%; height:auto; display:block; }
 
+    /* Footer */
     footer .legal { text-align:center; display:block; }
 
+    /* Reveal Animation */
     .reveal{ opacity:0; transform: translateY(12px); }
     .reveal.is-visible{ opacity:1; transform: translateY(0); transition: opacity .55s ease, transform .55s ease; }
 
     /* ==== THEMES ==== */
-    body.theme-mint {
-      --bg: #eef7f1;
-      background: linear-gradient(180deg,#f6fbf7 0%, #ffffff 55%, #eef7f1 100%) !important;
-    }
     body.theme-warm {
-      --bg: #f9f7f2;
-      background: linear-gradient(180deg,#fbf9f4 0%, #ffffff 60%, #f9f7f2 100%) !important;
-    }
-    body.theme-neutral {
-      --bg: #f5f5f5;
-      background: linear-gradient(180deg,#f7f7f7 0%, #ffffff 60%, #f3f3f3 100%) !important;
-    }
-    body.theme-mist {
-      --bg: #edf3f7;
-      background: linear-gradient(180deg,#f2f6f9 0%, #ffffff 60%, #edf3f7 100%) !important;
+      --bg: #f6f1e8;
+      background: linear-gradient(180deg,#f9f6ef 0%, #ffffff 50%, #f4ebdc 100%) !important;
     }
   </style>
 </head>
 
-<body class="theme-mint">
+<body class="theme-warm">
   <div class="page">
     <!-- ===== HERO ===== -->
     <header class="site-header middle">
@@ -174,7 +166,9 @@
           <div class="hero-panel reveal">
             <img class="logo" src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
             <h1>Solarstrom statt Erdgas-Strom</h1>
-            <p class="tagline">Informieren. Mitmachen. Briefe an Abgeordnete – wir drucken &amp; versenden physisch.</p>
+            <p class="tagline">
+              Informieren. Mitmachen. Briefe an Abgeordnete – wir drucken &amp; versenden physisch.
+            </p>
             <div class="cta-row">
               <a class="cta primary" href="#mitmachen">Jetzt mitmachen</a>
               <a class="cta secondary" href="#material">Materialien</a>
@@ -182,6 +176,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Zähler -->
       <div class="stats-wrap reveal">
         <div class="stats-banner" role="status" aria-live="polite">
           <div class="stats-iconbox"><div class="stats-icon" aria-hidden="true">📄</div></div>
@@ -199,117 +195,118 @@
 
     <!-- ===== CONTENT ===== -->
     <main class="middle">
+
+      <!-- Einleitung -->
       <section id="intro">
         <div class="lead">
           Wirtschaftsministerin Reiche und Bundeskanzler Friedrich Merz sprechen von Technologieoffenheit und Wirtschaftlichkeit. Mit ihren konkreten Forderungen werden aber einseitig fossile Kraftwerke begünstigt und der Ausbau günstiger Erneuerbaren gebremst. 
+          Weniger Ausbau bedeutet: Bürger und Unternehmen mit höheren Stromkosten belasten, den Wirtschaftsstandort Deutschland schwächen, die Abhängigkeit von fossilen Importen aus unzuverlässigen Staaten verlängern und das Klimaziel gefährden.
+          Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: <em>„Für uns ist klar: Energie muss bezahlbar, sicher und sauber sein“</em>.
         </div>
         <div class="callout" style="margin-top:12px;">
           <strong>Kernaussage:</strong> Solarstrom senkt Kosten, erhöht Versorgungssicherheit und schützt Klima &amp; Gesundheit.
         </div>
       </section>
 
+      <!-- Aktuelle Sendung -->
       <section id="sendung">
         <h2 class="section-title">Der Kampagnenstart</h2>
         <div class="video-wrap">
-          <iframe src="https://www.youtube-nocookie.com/embed/lzq9l2sW6Lo" title="Solarstrom statt Erdgas-Strom – Der Kampagnenstart" allowfullscreen></iframe>
+          <iframe
+            src="https://www.youtube-nocookie.com/embed/lzq9l2sW6Lo"
+            title="Solarstrom statt Erdgas-Strom – Der Kampagnenstart"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen></iframe>
+        </div>
+
+        <p style="margin-top:10px">
+          <a class="cta secondary" href="https://youtu.be/hrUNTbE8zKQ" target="_blank" rel="noopener">
+            Auf YouTube ansehen
+          </a>
+        </p>
+
+        <h3 style="margin-top:30px;">Weitere Beiträge der Aktion</h3>
+        <div class="video-wrap">
+          <iframe
+            src="https://www.youtube-nocookie.com/embed/videoseries?list=PLu9ITSfqUeKtQ50y9FI0tNJ2moLuKDDAc"
+            title="YouTube-Playlist: Aktion Solarstrom statt Erdgas-Strom"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen></iframe>
         </div>
         <p style="margin-top:10px">
-          <a class="cta secondary" href="https://youtu.be/hrUNTbE8zKQ" target="_blank" rel="noopener">Auf YouTube ansehen</a>
+          <a class="cta secondary" href="https://www.youtube.com/playlist?list=PLu9ITSfqUeKtQ50y9FI0tNJ2moLuKDDAc" target="_blank" rel="noopener">
+            Ganze Playlist auf YouTube ansehen
+          </a>
         </p>
       </section>
 
+      <!-- Ziele -->
       <section id="ziele">
         <h2 class="section-title">Kernforderungen</h2>
         <div class="grid2">
-          <div class="card"><h3>1. Keine neuen Erdgaskraftwerke</h3><p>Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken.</p></div>
-          <div class="card"><h3>2. Ausbau Erneuerbarer beschleunigen</h3><p>und netzdienliche Erzeugung belohnen.</p></div>
-          <div class="card"><h3>3. Feste Einspeisevergütung beibehalten</h3><p>bis Smart Meter flächendeckend eine einfache, flexible Vergütung erlauben.</p></div>
-          <div class="card"><h3>4. Bestandsschutz</h3><p>und keine Zusatzbelastung für erneuerbare Stromerzeugung.</p></div>
+          <div class="card">
+            <h3>1. Keine neuen Erdgaskraftwerke</h3>
+            <p>Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken.</p>
+          </div>
+          <div class="card">
+            <h3>2. Ausbau Erneuerbarer beschleunigen</h3>
+            <p>und netzdienliche Erzeugung belohnen.</p>
+          </div>
+          <div class="card">
+            <h3>3. Feste Einspeisevergütung beibehalten</h3>
+            <p>bis Smart Meter flächendeckend eine einfache, flexible Vergütung erlauben.</p>
+          </div>
+          <div class="card">
+            <h3>4. Bestandsschutz</h3>
+            <p>und keine Zusatzbelastung für erneuerbare Stromerzeugung.</p>
+          </div>
         </div>
       </section>
 
+      <!-- Hintergrund -->
+      <section id="hintergrund">
+        <h2 class="section-title">Hintergrund &amp; Argumente</h2>
+        <h3>Kosten, Klima &amp; Sicherheit</h3>
+        <ul>
+          <li>Solarstrom senkt Stromgestehungskosten und Risiken fossiler Preise.</li>
+          <li>Direktnutzung reduziert Netzbelastung und Verluste.</li>
+          <li>Dezentrale Anlagen erhöhen die Resilienz.</li>
+        </ul>
+      </section>
+
+      <!-- Materialien -->
+      <section id="material">
+        <h2 class="section-title">Materialien</h2>
+        <p>Hier finden Sie die Begründung für unsere Forderungen – zum Nachlesen und Weitergeben.</p>
+        <p>
+          <a class="cta secondary" href="Solarstrom statt Erdgasstrom - Die Argumente.pdf" download>📄 Positionspapier</a>
+        </p>
+      </section>
+
+      <!-- Mitmachen -->
+      <section id="mitmachen">
+        <h2 class="section-title">Mitmachen</h2>
+        <div class="grid2">
+          <div class="card">
+            <h3>Brief an Abgeordnete</h3>
+            <p>Schreiben Sie Ihren Brief – wir übernehmen Ausdruck und Postversand an die zuständige Bundestagsabgeordnete/den zuständigen Abgeordneten.</p>
+            <a class="cta primary" href="index-full.html">Brief einreichen</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- Träger -->
       <section id="partner" class="partner">
         <h2 class="section-title">Träger der Kampagne</h2>
+        <p>Die Kampagne wird von dem VEEG e.V. und der EWG durchgeführt.</p>
         <div class="orgs">
           <article class="org">
-            <div class="logoBox"><img src="assets/veeglogo.svg" alt="VEEG e. V."></div>
-            <div><h3>VEEG e. V.</h3><p>Der Verband EnergieErzeugende Gebäude fördert Gebäude als aktive Energieproduzenten.</p></div>
-          </article>
-          <article class="org">
-            <div class="logoBox"><img src="assets/energywatchgroup.png" alt="Energy Watch Group"></div>
-            <div><h3>Energy Watch Group</h3><p>Gemeinnütziger Think Tank zur wissenschaftlichen Politikberatung in der Energiewende.</p></div>
-          </article>
-        </div>
-      </section>
-    </main>
-
-    <footer class="site-footer middle">
-      <nav class="legal">
-        <a href="Impressum.html">Impressum</a> · <a href="Datenschutz.html">Datenschutz</a>
-      </nav>
-      <p style="text-align:center">© Kampagne „Solarstrom statt Erdgas-Strom”</p>
-    </footer>
-  </div>
-
-  <script>
-    // Smooth Scrolling
-    document.addEventListener('click', e=>{
-      const a=e.target.closest('a[href^="#"]');
-      if(!a)return;
-      const el=document.querySelector(a.getAttribute('href'));
-      if(el){e.preventDefault();el.scrollIntoView({behavior:'smooth'});}
-    });
-
-    // Counter
-    const STATS_URL='/api/stats.json';
-    function countUp(el,to,duration=1200){
-      const fmt=new Intl.NumberFormat('de-DE');
-      const start=performance.now();
-      function frame(now){
-        const t=Math.min(1,(now-start)/duration);
-        el.textContent=fmt.format(Math.round(to*t));
-        if(t<1)requestAnimationFrame(frame);
-      }
-      requestAnimationFrame(frame);
-    }
-    async function loadCounter(){
-      const el=document.getElementById('pdfCount');
-      try{
-        const res=await fetch(STATS_URL+`?nocache=${Date.now()}`,{cache:'no-store'});
-        const data=await res.json();
-        const val=Number(data.pdfs_generated??data.count??0);
-        countUp(el,val);
-      }catch{el.textContent='–';}
-    }
-    loadCounter();
-
-    // Reveal Animation
-    (function(){
-      const els=document.querySelectorAll('.reveal');
-      if(!('IntersectionObserver'in window)){els.forEach(e=>e.classList.add('is-visible'));return;}
-      const io=new IntersectionObserver(entries=>{
-        entries.forEach(ent=>{
-          if(ent.isIntersecting){ent.target.classList.add('is-visible');io.unobserve(ent.target);}
-        });
-      },{rootMargin:'0px 0px -10% 0px',threshold:.12});
-      els.forEach(e=>io.observe(e));
-    })();
-  </script>
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            <div class="logoBox">
+              <img src="assets/veeglogo.svg" alt="VEEG e. V. – Verband EnergieErzeugende Gebäude">
+            </div>
+            <div>
+              <h3>VEEG e. V. – Verband EnergieErzeugende Gebäude</h3>
+              <p>Der VEEG e. V. fördert Gebäude als aktive Energieproduzenten – also solche, die ihren Energiebedarf selbst erzeugen, möglichst energiekostenfrei werden und Klimaschutz praktisch mitdenken.</p>
+              <p><a href="https://ve-eg
