--- a/indexTest.html
+++ b/indexTest.html
@@ -29,7 +29,7 @@
     html, body { height: 100%; }
     body {
       margin: 0;
-      font: 16px/1.6 "Inter", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font: 16px/1.7 "Inter", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       background: var(--bg);
       color: var(--text);
     }
@@ -49,10 +49,20 @@
         linear-gradient(rgba(0,0,0,.32), rgba(0,0,0,.55)),
         url('assets/Bundestag.jpg') center 45%/cover no-repeat;
     }
+    /* Solar Glow hinter dem Hero */
+    .hero-wrap::after{
+      content:"";
+      position:absolute; inset:0;
+      background: radial-gradient(ellipse at 50% 120%, rgba(246,177,10,.28) 0%, rgba(246,177,10,0) 70%);
+      pointer-events:none;
+    }
+
     .hero{
       display:flex; align-items:center; justify-content:center;
       text-align:center; color:#fff;
+      /* kompakter: vorher 90px / 120px */
       padding: clamp(40px, 7vh, 72px) 16px clamp(56px, 9vh, 90px);
+      position:relative;
     }
     .hero-panel{
       background: rgba(10,125,50,.78);
@@ -60,8 +70,16 @@
       width:min(92vw, 760px); max-width:760px;
       box-shadow:0 18px 48px rgba(0,0,0,.28);
       backdrop-filter: blur(2px);
+      position:relative; overflow:hidden;
     }
+    /* Solar Highlight unter dem Panel */
+    .hero-panel::after{
+      content:""; position:absolute; left:0; right:0; bottom:0; height:6px;
+      background: linear-gradient(90deg, #f6b10a, #ffd84a);
+    }
+
     .hero .logo{
+      /* kompakter: vorher clamp(220px, 50vw, 480px) */
       width: clamp(170px, 36vw, 380px);
       height:auto; display:block; margin:0 auto 8px;
       filter: drop-shadow(0 3px 8px rgba(0,0,0,.35));
@@ -78,11 +96,12 @@
     .cta.secondary{ background:#fff; color:#0a7d32; border:1px solid #cfe7d8; }
     .cta:hover{ transform:translateY(-1px); }
 
-    /* ===== Zähler ===== */
+    /* ===== Zähler – kompakt & angedockt ===== */
     .stats-wrap{
       display:flex; justify-content:center;
+      /* näher an den Hero gerückt */
       transform: translateY(-44px);
-      margin-bottom: -28px;
+      margin-bottom: -28px; /* kompensiert das Translate im Flow */
     }
     .stats-banner{
       display:flex; align-items:center; gap:10px;
@@ -91,6 +110,7 @@
       color:#fff; border-radius:12px; box-shadow:0 12px 28px rgba(10,124,91,.28);
     }
     .stats-iconbox{ width:34px; height:34px; display:flex; align-items:center; justify-content:center; background:rgba(255,255,255,.15); border-radius:8px; }
+    .stats-icon{ font-size:1.1rem; }
     .stats-text{ line-height:1.1; }
     .stats-label{ font-size:.85rem; opacity:.9; }
     .stats-value{ font-size:1.6rem; font-weight:800; }
@@ -111,14 +131,26 @@
     /* ===== Sektionen / Karten ===== */
     main.middle > section { margin: 32px 0; }
     .lead { font-size:1.05rem; }
-    .section-title{ font-size:1.5rem; margin:0 0 14px; }
+    .section-title{ font-size:1.5rem; margin:0 0 14px; font-weight:700; }
     .grid2 { display:grid; gap:18px; grid-template-columns:1fr; }
     @media (min-width:780px){ .grid2{ grid-template-columns:1fr 1fr } }
-    .card { border:1px solid rgba(0,0,0,.06); border-radius: var(--radius); padding:18px; background:var(--card); box-shadow: var(--shadow); }
-    .card h3 { margin-top:0 }
+    .card {
+      border:1px solid rgba(0,0,0,.06);
+      border-radius: var(--radius);
+      padding:18px;
+      background:#fffdf8; /* Solar Contrast */
+      box-shadow: var(--shadow);
+      transition: transform .2s ease, box-shadow .2s ease;
+    }
+    .card h3 { margin-top:0; font-weight:700; }
+    /* Floating Cards */
+    .card:hover{
+      transform: translateY(-3px);
+      box-shadow: 0 6px 24px rgba(0,0,0,.12);
+    }
     .callout { border-left: 4px solid var(--accent); background:#fff8e1; padding:14px 16px; border-radius: 8px; }
 
-    /* ===== YouTube ===== */
+    /* ===== YouTube: groß & responsiv ===== */
     .video-wrap {
       position: relative;
       width: 100%;
@@ -154,9 +186,37 @@
       --bg: #f6f1e8;
       background: linear-gradient(180deg,#f9f6ef 0%, #ffffff 50%, #f4ebdc 100%) !important;
     }
+
+    /* ==== ECO TEXTURE (CSS-only) ==== */
+    body::before{
+      content:"";
+      position:fixed; inset:0;
+      pointer-events:none; z-index:-1;
+      /* Sehr subtile Körnung via mehrere Radialverläufe */
+      background:
+        radial-gradient(1px 1px at 25% 15%, rgba(0,0,0,.04) 0, rgba(0,0,0,0) 60%),
+        radial-gradient(1px 1px at 60% 40%, rgba(0,0,0,.03) 0, rgba(0,0,0,0) 60%),
+        radial-gradient(1px 1px at 80% 70%, rgba(0,0,0,.03) 0, rgba(0,0,0,0) 60%),
+        radial-gradient(1px 1px at 40% 85%, rgba(0,0,0,.02) 0, rgba(0,0,0,0) 60%);
+      opacity:.28;
+      mix-blend-mode:multiply;
+    }
+
+    /* ==== Sticky CTA (mobil) ==== */
+    @media (max-width:700px){
+      .sticky-cta{
+        position:fixed; left:0; right:0; bottom:12px; z-index:1000;
+        display:flex; justify-content:center; pointer-events:none;
+      }
+      .sticky-cta a{
+        pointer-events:auto;
+        background:linear-gradient(135deg,#0a7d32,#0bbd54);
+        color:#fff; padding:10px 18px; border-radius:10px;
+        font-weight:700; text-decoration:none; box-shadow:0 8px 20px rgba(10,125,50,.25);
+      }
+    }
   </style>
 </head>
-
 <body class="theme-warm">
   <div class="page">
     <!-- ===== HERO ===== -->
@@ -177,7 +237,7 @@
         </div>
       </div>
 
-      <!-- Zähler -->
+      <!-- Zähler: eigene Zeile, “angedockt” -->
       <div class="stats-wrap reveal">
         <div class="stats-banner" role="status" aria-live="polite">
           <div class="stats-iconbox"><div class="stats-icon" aria-hidden="true">📄</div></div>
@@ -309,4 +369,122 @@
             <div>
               <h3>VEEG e. V. – Verband EnergieErzeugende Gebäude</h3>
               <p>Der VEEG e. V. fördert Gebäude als aktive Energieproduzenten – also solche, die ihren Energiebedarf selbst erzeugen, möglichst energiekostenfrei werden und Klimaschutz praktisch mitdenken.</p>
-              <p><a href="https://ve-eg
+              <p><a href="https://ve-eg.de/" target="_blank" rel="noopener">ve-eg.de</a></p>
+            </div>
+          </article>
+          <article class="org">
+            <div class="logoBox">
+              <img src="assets/energywatchgroup.png" alt="Energy Watch Group (EWG)">
+            </div>
+            <div>
+              <h3>Energy Watch Group (EWG)</h3>
+              <p>Die Energy Watch Group (EWG) ist ein gemeinnütziger Think Tank, der sich dem Ziel verschrieben hat, die Klimakrise zu stoppen und die Erdatmosphäre wieder abzukühlen.</p>
+              <p><a href="https://energywatchgroup.org/" target="_blank" rel="noopener">energywatchgroup.org</a></p>
+            </div>
+          </article>
+        </div>
+      </section>
+    </main>
+
+    <footer class="site-footer middle">
+      <nav class="legal">
+        <a href="Impressum.html">Impressum</a> · <a href="Datenschutz.html">Datenschutz</a>
+      </nav>
+      <p style="text-align:center">© Kampagne „Solarstrom statt Erdgas-Strom”</p>
+    </footer>
+  </div>
+
+  <!-- Sticky CTA (mobil) -->
+  <div class="sticky-cta">
+    <a href="#mitmachen" aria-label="Jetzt mitmachen">Jetzt mitmachen</a>
+  </div>
+
+  <script>
+    // Smooth Scrolling für In-Page-Links
+    document.addEventListener('click', (e) => {
+      const a = e.target.closest('a[href^="#"]'); if(!a) return;
+      const el = document.querySelector(a.getAttribute('href'));
+      if (el) { e.preventDefault(); el.scrollIntoView({behavior:'smooth'}); }
+    });
+
+    // ---- Live-Zähler-Logik (PDFs) ----
+    const STATS_URL = '/api/stats.json';
+
+    function countUp(el, to, duration = 1200) {
+      const fmt = new Intl.NumberFormat('de-DE');
+      if (!('requestAnimationFrame' in window) || duration <= 0) {
+        el.textContent = fmt.format(Math.max(0, Number(to)||0));
+        return;
+      }
+      const start = performance.now();
+      const from = 0;
+      function frame(now) {
+        const t = Math.min(1, (now - start) / duration);
+        const eased = 1 - Math.pow(1 - t, 3);
+        const val = Math.round(from + (to - from) * eased);
+        el.textContent = fmt.format(val);
+        if (t < 1) requestAnimationFrame(frame);
+      }
+      requestAnimationFrame(frame);
+    }
+
+    function formatStandText(isoString) {
+      if (!isoString) return null;
+      const d = new Date(isoString);
+      if (isNaN(d)) return null;
+      const fmtDate = new Intl.DateTimeFormat('de-DE', { day:'2-digit', month:'2-digit' }).format(d);
+      const fmtTime = new Intl.DateTimeFormat('de-DE', { hour:'2-digit', minute:'2-digit' }).format(d);
+      return `Stand: ${fmtDate}, ${fmtTime} Uhr`;
+    }
+
+    async function loadCounter() {
+      const el = document.getElementById('pdfCount');
+      const metaWrap = document.getElementById('statsMeta');
+      const metaText = document.getElementById('statsTime');
+      if (!el) return;
+
+      try {
+        const res = await fetch(STATS_URL + `?nocache=${Date.now()}`, { cache: 'no-store' });
+        if (!res.ok) throw new Error('HTTP ' + res.status);
+        const data = await res.json();
+
+        // Zahl (neuer Key pdfs_generated, Fallbacks bleiben)
+        const raw = Number(data.pdfs_generated ?? data.count ?? data.sent_emails ?? 0);
+        const value = Number.isFinite(raw) && raw >= 0 ? raw : 0;
+        countUp(el, value);
+
+        // Zeitstempel anzeigen (neuer/alte Keys)
+        const stand = formatStandText(data.last_update || data.stats_updated_at || data.sent_emails_last_update);
+        if (stand && metaWrap && metaText) {
+          metaText.textContent = stand;
+          metaWrap.hidden = false;
+        } else if (metaWrap) {
+          metaWrap.hidden = true;
+        }
+      } catch (e) {
+        console.warn('Zähler konnte nicht geladen werden:', e);
+        el.textContent = '–';
+        if (metaWrap) metaWrap.hidden = true;
+      }
+    }
+
+    loadCounter();
+  </script>
+
+  <script>
+    // Reveal on load / scroll
+    (function(){
+      const els = document.querySelectorAll('.reveal');
+      if(!('IntersectionObserver' in window)){ els.forEach(e=>e.classList.add('is-visible')); return; }
+      const io = new IntersectionObserver((entries)=>{
+        entries.forEach(ent=>{
+          if(ent.isIntersecting){ ent.target.classList.add('is-visible'); io.unobserve(ent.target); }
+        });
+      }, {rootMargin: '0px 0px -10% 0px', threshold: .12});
+      els.forEach(e=>io.observe(e));
+    })();
+  </script>
+</body>
+</html>
+
+
